--- a/E2P/Views/CompanyDialogWindow.axaml
+++ b/E2P/Views/CompanyDialogWindow.axaml
@@ -1,5 +1,5 @@
 <Window
-    x:Class="E2P.CompanyWindow"
+    x:Class="E2P.Views.CompanyDialogWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
     Height="400"
     d:DesignHeight="450"
     d:DesignWidth="500"
-    x:DataType="vm:CompanyViewModel"
+    x:DataType="vm:CompanyDialogViewModel"
     Background="Transparent"
     ExtendClientAreaToDecorationsHint="True"
     TransparencyLevelHint="AcrylicBlur"
