--- a/E2P/App.axaml
+++ b/E2P/App.axaml
@@ -3,6 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:E2P"
+    xmlns:sty="using:FluentAvalonia.Styling"
     RequestedThemeVariant="Dark">
     <!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
 
@@ -12,7 +13,9 @@
 
     <Application.Styles>
         <FluentTheme />
+        <sty:FluentAvaloniaTheme />
         <StyleInclude Source="avares://E2P/Assets/Icons.axaml" />
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+        <StyleInclude Source="avares://FluentAvalonia.BreadcrumbBar/Styling/Styles.axaml" />
     </Application.Styles>
 </Application>
